--- a/app/views/navigation.scala.html
+++ b/app/views/navigation.scala.html
@@ -6,6 +6,7 @@
    <ul class="nav">
      <li><a href="@routes.Products.index()">Home</a></li>
      <li><a href="@routes.Products.list()">Products</a></li>
+      <li><a href="@routes.Reports.index()">Reports</a></li>
      <li><a href="">Contact</a></li>
    </ul></div>
 </div>
